fix tight spacing on homepage

--- a/_includes/assets/css/base-styles.css
+++ b/_includes/assets/css/base-styles.css
@@ -65,7 +65,7 @@ h1 {
 
 h2 {
   font-size: var(--font-size-h2);
-  margin-top: 80px;
+  margin-top: 50px;
   margin-bottom: 28px;
   padding: 10px 0 10px 0;
   border-top: 2px solid var(--color-secondary);
